--- a/.github/workflows/check_temp.yml
+++ b/.github/workflows/check_temp.yml
@@ -9,4 +9,4 @@ jobs:
       - name: Check Temp every hour
         run: | 
           pip install requests
-          python3 action_job.py ${{ secrets.IP_AND_PORT }} ${{ secrets.IFTTT_EVENT }} ${{ secrets.IFTTT_TOKEN }}
+          python3 action_job.py "http://${{ secrets.IP_AND_PORT }}" ${{ secrets.IFTTT_EVENT }} ${{ secrets.IFTTT_TOKEN }}
