--- a/.github/workflows/check_temp.yml
+++ b/.github/workflows/check_temp.yml
@@ -1,6 +1,9 @@
+#on:
+#  schedule:
+#    - cron: '*/15 * * * *'
+
 on:
-  schedule:
-    - cron: '*/15 * * * *'
+  workflow_dispatch
 
 jobs:
   test_schedule:
