--- a/.github/workflows/check_temp.yml
+++ b/.github/workflows/check_temp.yml
@@ -6,13 +6,11 @@ on:
   workflow_dispatch
 
 jobs:
-  test_schedule:
+  check_temps:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - name: Check Temp every hour
         run: | 
           pip install requests
-          ls
-          cd ..
-          ls
           python3 action_job.py "http://${{ secrets.IP_AND_PORT }}" ${{ secrets.IFTTT_EVENT }} ${{ secrets.IFTTT_TOKEN }}
