Add both scheduled and manual checks

--- a/.github/workflows/check_temp_on_schedule.yml
+++ b/.github/workflows/check_temp_on_schedule.yml
@@ -1,9 +1,6 @@
-#on:
-#  schedule:
-#    - cron: '*/15 * * * *'
-
 on:
-  workflow_dispatch
+  schedule:
+    - cron: '*/15 * * * *'
 
 jobs:
   check_temps:
